Replace source with reference 1.21.11 VulkanMod 0.5.10
Wholesale replacement of source tree, mixins, access widener,
assets, and fabric.mod.json from working 1.21.11 reference build.